Revision history for {{$dist->name}}

{{$NEXT}}

          - Explicitly require perl version in code
          - Made reference to LAWALSH be a link to her MetaCPAN author page

0.002     2014-08-16 22:27:52Z
          - a bit of documentation tweaking

0.001     2013-04-21 21:55:41Z
          - Initial release.
