@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+          - Don't import module_notional_filename() from Module::Runtime,
+            then we don't have to clean it out of the namespace.
           - Explicitly require perl version in code
           - Made reference to LAWALSH be a link to her MetaCPAN author page
 
